<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@mipmap/logo_foreground"
        android:layout_marginBottom="60dp"
        android:id="@+id/logo_sign_in"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="60dp"
        android:layout_height="wrap_content"
        android:background="@drawable/hollow_rectangle"
        android:orientation="horizontal"
        android:weightSum="100"
        android:id="@+id/email_sign_in"
        android:layout_below="@+id/logo_sign_in"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@drawable/hollow_user"
            android:layout_weight="15"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="7dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:hint="Email Address"
            android:textColorHint="#fff"
            android:background="@null"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:id="@+id/email_et_sic"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="60dp"
        android:layout_height="wrap_content"
        android:background="@drawable/hollow_rectangle"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginVertical="20dp"
        android:id="@+id/password_sign_in"
        android:layout_below="@+id/email_sign_in"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:background="@drawable/password_key"
            android:layout_weight="15"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="7dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="75"
            android:hint="Password"
            android:textColorHint="#fff"
            android:background="@null"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:id="@+id/password_et_sic"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:text="Sign in"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/register"
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/sign_in_button_sic"
        android:layout_below="@id/password_sign_in"
        android:layout_centerHorizontal="true"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:layout_marginBottom="10dp"
            android:text="Don't have account? "/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register here"
            android:background="@null"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:id="@+id/sign_up_button_sic"/>
    </LinearLayout>
</RelativeLayout>
