<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chatActivity"
    android:orientation="vertical"
    android:weightSum="100">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp" >

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/back_arrow"
                android:id="@+id/back_btn_ac"
                android:layout_centerVertical="true"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/name_ac"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/online_status_ac"/>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle"
                    android:id="@+id/dp_ac"
                    android:layout_centerInParent="true"/>

                <LinearLayout
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="50dp"
                    android:background="@null"
                    android:id="@+id/is_online_ac"
                    android:layout_marginStart="35dp">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:layout_margin="2dp"
                        android:id="@+id/is_online_inner_ac"/>
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:layout_marginVertical="30dp"
        android:id="@+id/msg_rv"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/gender_rectangle_button" >

        <LinearLayout
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginHorizontal="10dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_photo_camera_black_24dp"
                android:id="@+id/select_image_ac" />
        </LinearLayout>


        <EditText
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:background="@null"
            android:hint="Type Your Message Here"
            android:textSize="12sp"
            android:id="@+id/msg_text_ac"/>

        <LinearLayout
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_marginEnd="10dp">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/send_msg"
                android:id="@+id/send_msg_ac"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>