<resources>
    <string name="app_name">i170191_i170228</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>

